--- a/frontend/tsconfig.node.json
+++ b/frontend/tsconfig.node.json
@@ -5,6 +5,10 @@
 	"strictPropertyInitialization": false,
     "composite": true,
     "module": "ESNext",
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
     "types": ["node"]
   }
 }
