--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "@types/vue": "^2.0.0",
+    "types": "^0.1.1",
     "vue": "^3.3.2",
     "vue-router": "4",
+    "vue-types": "^5.0.3",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
